# ghatak-ryzen

./: .gitignore  BIOS.md  BLUEPRINT.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
blueprints/: phase-1-smoke-and-ship.md
config/: config.example.yml
scripts/: install.sh
src/ghatak_ryzen/: __init__.py  actuators.py  cli.py  config.py  daemon.py  judges.py  sensors.py  state.py  storage.py  topology.py
systemd/: ghatak-ryzen.service
